kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
  - port: 80
    targetPort: 4499
    nodePort: 30080 # Choose a port in the 30000-32767 range
